Update IBM-DS0421-Web Scraping with Beautiful Soup.ipynb

--- a/Exercises/IBM-DS0421-Web Scraping with Beautiful Soup.ipynb
+++ b/Exercises/IBM-DS0421-Web Scraping with Beautiful Soup.ipynb
@@ -1607,7 +1607,7 @@
     }
    ],
    "source": [
-    "soup = BeautifulSoup(data,\"html5lib\")  # create a soup object using the variable 'data'"
+    "soup = BeautifulSoup(data,\"html.parser\")  # create a soup object using the variable 'data'"
    ]
   },
   {
