--- a/Exercises/IBM-DS0421-Web Scraping with Beautiful Soup.ipynb
+++ b/Exercises/IBM-DS0421-Web Scraping with Beautiful Soup.ipynb
@@ -90,16 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: bs4 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (0.0.2)\n",
-      "Requirement already satisfied: beautifulsoup4 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (from bs4) (4.11.1)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (from beautifulsoup4->bs4) (2.3.2.post1)\n"
+      "/bin/bash: pip: command not found\n"
      ]
     }
    ],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +272,8 @@
       "   Salary: $73,200, 000\n",
       "  </p>\n",
       " </body>\n",
-      "</html>\n"
+      "</html>\n",
+      "\n"
      ]
     }
    ],
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +355,7 @@
        "<h3><b id=\"boldest\">Lebron James</b></h3>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +397,7 @@
        "<b id=\"boldest\">Lebron James</b>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +425,7 @@
        "<h3><b id=\"boldest\">Lebron James</b></h3>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +453,7 @@
        "<h3><b id=\"boldest\">Lebron James</b></h3>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +480,7 @@
        "<body><h3><b id=\"boldest\">Lebron James</b></h3><p> Salary: $ 92,000,000 </p><h3> Stephen Curry</h3><p> Salary: $85,000, 000 </p><h3> Kevin Durant </h3><p> Salary: $73,200, 000</p></body>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +507,7 @@
        "<p> Salary: $ 92,000,000 </p>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +535,7 @@
        "<h3> Stephen Curry</h3>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +605,7 @@
        "'boldest'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +632,7 @@
        "{'id': 'boldest'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +666,7 @@
        "'boldest'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +700,7 @@
        "'Lebron James'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +728,7 @@
        "bs4.element.NavigableString"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +755,7 @@
        "'Lebron James'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +916,7 @@
        " <tr><td>3</td><td><a href=\"https://en.wikipedia.org/wiki/Florida\">Florida<a> </a></a></td><td>80 kg</td></tr>]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +944,7 @@
        "<tr><td id=\"flight\">Flight No</td><td>Launch site</td> <td>Payload mass</td></tr>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +996,7 @@
        "<td id=\"flight\">Flight No</td>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1110,7 @@
        " <td>80 kg</td>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1145,7 @@
        "[<td id=\"flight\">Flight No</td>]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1173,7 @@
        " <a href=\"https://en.wikipedia.org/wiki/Florida\">Florida<a> </a></a>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1203,7 @@
        " <a href=\"https://en.wikipedia.org/wiki/Florida\">Florida<a> </a></a>]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1307,7 @@
        "['Florida', 'Florida']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1505,7 @@
        "<table class=\"rocket\"><tr><td>Flight No</td><td>Launch site</td> <td>Payload mass</td></tr><tr><td>1</td><td>Florida</td><td>300 kg</td></tr><tr><td>2</td><td>Texas</td><td>94 kg</td></tr><tr><td>3</td><td>Florida </td><td>80 kg</td></tr></table>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1532,7 @@
        "<table class=\"pizza\"><tr><td>Pizza Place</td><td>Orders</td> <td>Slices </td></tr><tr><td>Domino's Pizza</td><td>10</td><td>100</td></tr><tr><td>Little Caesars</td><td>12</td><td>144 </td></tr><tr><td>Papa John's </td><td>15 </td><td>165</td></tr></table>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,22 +1589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FeatureNotFound",
-     "evalue": "Couldn't find a tree builder with the features you requested: html5lib. Do you need to install a parser library?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFeatureNotFound\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1955/1112302729.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msoup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"html5lib\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# create a soup object using the variable 'data'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/conda/envs/python/lib/python3.7/site-packages/bs4/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, element_classes, **kwargs)\u001b[0m\n\u001b[1;32m    249\u001b[0m                     \u001b[0;34m\"Couldn't find a tree builder with the features you \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m                     \u001b[0;34m\"requested: %s. Do you need to install a parser library?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 251\u001b[0;31m                     % \",\".join(features))\n\u001b[0m\u001b[1;32m    252\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m         \u001b[0;31m# At this point either we have a TreeBuilder instance in\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFeatureNotFound\u001b[0m: Couldn't find a tree builder with the features you requested: html5lib. Do you need to install a parser library?"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "soup = BeautifulSoup(data,\"html.parser\")  # create a soup object using the variable 'data'"
    ]
@@ -1619,9 +1605,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.ibm.com/cloud?lnk=intro\n"
+     ]
+    }
+   ],
    "source": [
     "for link in soup.find_all('a',href=True):  # in html anchor/link is represented by the tag <a>\n",
     "\n",
@@ -1637,9 +1631,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<img alt=\"Potret para konsultan IBM\" class=\"bx--image__img\" id=\"image-1653134387\" loading=\"lazy\" src=\"/content/dam/adobe-cms/default-images/home-consultants.component.crop-16by9-xl.ts=1695238692853.jpg/content/adobe-cms/id/id/homepage/_jcr_content/root/table_of_contents/simple_image\"/>\n",
+      "/content/dam/adobe-cms/default-images/home-consultants.component.crop-16by9-xl.ts=1695238692853.jpg/content/adobe-cms/id/id/homepage/_jcr_content/root/table_of_contents/simple_image\n"
+     ]
+    }
+   ],
    "source": [
     "for link in soup.find_all('img'):# in html image is represented by the tag <img>\n",
     "    print(link)\n",
@@ -1655,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,16 +1685,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(data,\"html5lib\")"
+    "soup = BeautifulSoup(data,\"html.parser\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,9 +1704,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color Name--->None\n",
+      "lightsalmon--->#FFA07A\n",
+      "salmon--->#FA8072\n",
+      "darksalmon--->#E9967A\n",
+      "lightcoral--->#F08080\n",
+      "coral--->#FF7F50\n",
+      "tomato--->#FF6347\n",
+      "orangered--->#FF4500\n",
+      "gold--->#FFD700\n",
+      "orange--->#FFA500\n",
+      "darkorange--->#FF8C00\n",
+      "lightyellow--->#FFFFE0\n",
+      "lemonchiffon--->#FFFACD\n",
+      "papayawhip--->#FFEFD5\n",
+      "moccasin--->#FFE4B5\n",
+      "peachpuff--->#FFDAB9\n",
+      "palegoldenrod--->#EEE8AA\n",
+      "khaki--->#F0E68C\n",
+      "darkkhaki--->#BDB76B\n",
+      "yellow--->#FFFF00\n",
+      "lawngreen--->#7CFC00\n",
+      "chartreuse--->#7FFF00\n",
+      "limegreen--->#32CD32\n",
+      "lime--->#00FF00\n",
+      "forestgreen--->#228B22\n",
+      "green--->#008000\n",
+      "powderblue--->#B0E0E6\n",
+      "lightblue--->#ADD8E6\n",
+      "lightskyblue--->#87CEFA\n",
+      "skyblue--->#87CEEB\n",
+      "deepskyblue--->#00BFFF\n",
+      "lightsteelblue--->#B0C4DE\n",
+      "dodgerblue--->#1E90FF\n"
+     ]
+    }
+   ],
    "source": [
     "#Get all rows from the table\n",
     "for row in table.find_all('tr'): # in html table row is represented by the tag <tr>\n",
@@ -1768,9 +1811,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1782,7 +1825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
